# ironic-specs

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  placeholders.rst
priorities/: 2023-1-workitems.rst  2023-2-workitems.rst  2024-1-workitems.rst  2024-2-workitems.rst  2025-1-workitems.rst  2025-2-workitems.rst  2026-1-workitems.rst  2026-2-workitems.rst  TEMPLATE-workitems.rst  mitaka-priorities.rst  newton-priorities.rst  ocata-priorities.rst  pike-priorities.rst  queens-priorities.rst  rocky-priorities.rst  stein-priorities.rst  train-priorities.rst  ussuri-priorities.rst  victoria-priorities.rst  wallaby-priorities.rst  xena-themes.rst  yoga-themes.rst  zed-themes.rst
specs/: template.rst
specs/10.0/: ipa_api_versioning.rst
specs/10.1/: ansible-deploy-driver.rst  xclarity-driver.rst
specs/11.0/: inspect-wait-state.rst
specs/11.1/: deployment-steps-framework.rst
specs/12.0/: expose-conductor-info.rst  redfish-inspection.rst
specs/12.1/: deploy-templates.rst  ilo-oob-raid.rst  ownership-field.rst  support-smart-nic.rst
specs/13.0/: ilo-oob-disk-erase.rst  software-raid.rst
specs/15.0/: expose-hardware-indicators.rst
specs/15.2/: ramdisk_deploy_virtual_media_boot_iso.rst
specs/18.2/: node-history.rst
specs/22.0/: firmware-interface.rst
specs/24.1/: httpboot.rst
specs/26.1/: runbooks.rst
specs/28.0/: nc-si.rst
specs/29.0/: inspection-rules.rst
specs/31.0/: nic-firmware-updates.rst
tests/: test_titles.py
(+394 files in other folders)
