[metadata]
name = baremetal-specs
summary = OpenStack Baremetal Provisioning Program Development Specifications
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://specs.openstack.org/openstack/ironic-specs/
classifier =
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[files]
packages =
    specs
    priorities

[codespell]
ignore-words-list = ninjs
